--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,6 +1,16 @@
 header {
-    font-size: 3.5rem;
-    line-height: 110%;
-    margin: 1rem 0 1rem 3rem;
+    margin: 0 70px;
 }
-
+h1 {
+    font-size: 4rem;
+    line-height: 110%;
+    margin:.5rem 0 0 0;
+}
+h4 {
+    font-size: 1.5rem;
+}
+h5 {
+    font-size: 1.4rem;
+    line-height: 110%;
+    margin: .75rem 0 0rem 0;
+}
