--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 header {
-    margin: 0 70px;
+    margin: 0 10%;
 }
 h1 {
     font-size: 4rem;
@@ -7,7 +7,7 @@ h1 {
     margin:.5rem 0 0 0;
 }
 h4 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 h5 {
     font-size: 1.4rem;
