--- a/client/src/components/UserPages/publicProfile.css
+++ b/client/src/components/UserPages/publicProfile.css
@@ -1,13 +1,13 @@
-.card-content {
+.container {
     position: relative;
-    background-image:url('bg-image.jpg');
+    background-image:url('/assets/images/background.jpg');
     background-size: cover;
     background-position: fixed;
     background-repeat: no-repeat;   
     height: 500px;
 }
 
-#profileimage {
+.profile-image {
     position: absolute;
     bottom: 5%;
     max-width: 300px;
