--- a/client/src/components/Mainpage/Mainpage.css
+++ b/client/src/components/Mainpage/Mainpage.css
@@ -10,6 +10,6 @@ html {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: transparent;
+    /* background: transparent; */
   }
   
