Adding BioData component to the public profile page

--- a/client/src/components/UserPages/PublicProfile.css
+++ b/client/src/components/UserPages/PublicProfile.css
@@ -7,6 +7,10 @@
     height: 500px;
 }
 
+html {
+    /* background-image: unset; */
+}
+
 #profileimage {
     position: absolute;
     bottom: 5%;
