--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -2,7 +2,8 @@ header {
     margin: 0px 10% 10px;
 }
 h1 {
-    font-size: 4rem;
+    text-align: center;
+    font-size: 7rem;
     line-height: 110%;
     margin:.5rem 0 0 0;
 }
