--- a/client/src/components/UserPages/PrivateProfile/PrivateProfile.css
+++ b/client/src/components/UserPages/PrivateProfile/PrivateProfile.css
@@ -1,12 +1,14 @@
 .card-content {
     position: relative;
-    background-image:url('../bg-image.jpg');
     background-size: cover;
     background-position: fixed;
     background-repeat: no-repeat;   
     height: 500px;
 }
-
+.bg-girl {
+    background-image:url('../bg-image.jpg');
+    
+}
 #profileimage {
     position: absolute;
     bottom: 5%;
@@ -14,6 +16,8 @@
     z-index: 5;
 }
 #name {
+
+...    /* size: 30px; */
     position: absolute;
     bottom: 5%;
     right: 20%;
