--- a/client/src/components/UserPages/PublicProfile.css
+++ b/client/src/components/UserPages/PublicProfile.css
@@ -1,10 +1,14 @@
 .card-content {
     position: relative;
-    background-image:url('bg-image.jpg');
+    /* background-image:url('bg-image.jpg'); */
     background-size: cover;
     background-position: fixed;
     background-repeat: no-repeat;   
     height: 500px;
+}
+
+.bg-image {
+    background-image:url('bg-image.jpg');
 }
 
 #profileimage {
