WORKING PREFERENCE TAB BOYS

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,4 +1,4 @@
-.btn 
+/* .btn 
 {
     color: black;
     background-color: #7986cb; 
@@ -18,7 +18,7 @@
 .btn-block
 {
   background-color: #7986cb; 
-}
+} */
 /* @charset "UTF-8";
 @import 'https://fonts.googleapis.com/css?family=Noto+Sans';
 body {
