heroku data added

--- a/client/src/components/UserPages/PublicProfile.css
+++ b/client/src/components/UserPages/PublicProfile.css
@@ -8,8 +8,7 @@
 }
 
 .bg-image {
-    background-image:url('bg-image.jpg');
-}
+    background-image:url('pexels-photo-255379.jpeg');}
 
 #profileimage {
     position: absolute;
